--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Test Page!</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
     </head>
     <body>
         <h1>Here is an HTML file</h1>
