coca cola example

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Test Page!</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    </head>
-    <body>
-        <h1>Here is an HTML file</h1>
-    </body>
+
+<head>
+    <title>Coca-Cola</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+</head>
+
+<body>
+    <div id="main">
+        <div class="full-width">
+            <div id="large-image">
+                <!-- <div id="banner"> -->
+                <img id="banner" src="images/coca cola.jpg">
+                <!-- </div> -->
+                <!-- <img src="images/people drinking coca cola.jpeg"> -->
+            </div>
+        </div>
+        <div id="history" class="info">
+            <h1>History</h1>
+            <p>Coca Cola was founded in 1896.</p>
+        </div>
+        <div class="info">
+            <h1>Product Info</h1>
+            <p>We have Coke and Diet Coke and other flavors.</p>
+        </div>
+    </div>
+</body>
+
 </html>
