working on coca cola example

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
 <body>
     <div id="main">
-        <div class="full-width">
-            <div id="large-image">
-                <!-- <div id="banner"> -->
-                <img id="banner" src="images/coca cola.jpg">
-                <!-- </div> -->
-                <!-- <img src="images/people drinking coca cola.jpeg"> -->
-            </div>
+        <!-- <div class="full-width"> -->
+        <img id="banner" src="images/coca cola.png">
+        <div id="large-image">
+            <!-- <div id="banner"> -->
+            <!-- </div> -->
+            <!-- <img src="images/people drinking coca cola.jpeg"> -->
         </div>
+        <!-- </div> -->
         <div id="history" class="info">
-            <h1>History</h1>
+            <h2>History</h2>
             <p>Coca Cola was founded in 1896.</p>
         </div>
         <div class="info">
-            <h1>Product Info</h1>
+            <h2>Product Info</h2>
             <p>We have Coke and Diet Coke and other flavors.</p>
         </div>
     </div>
