--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Coca-Cola</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-</head>
 
 <body>
     <div id="large-image">
-        <img id="banner" src="images/coca cola.png">
+        <img id="banner" alt="Coca-Cola logo" src="images/coca cola.png">
     </div>
     <div class="grid">
         <div id="history" class="info">
@@ -26,7 +25,7 @@
         </div>
         <div id="bears" class="info">
             <h4>These are some polar bears.</h4>
-            <img class="fit" src="images/polar-bears.jpg">
+            <img class="fit" alt="A picture of two polar bears" src="images/polar-bears.jpg">
         </div>
     </div>
 </body>
