--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="info">
             <h2>Product Info</h2>
             <p>We have Coke and Diet Coke and other flavors.</p>
+            <div w3-include-html="my-include.html"></div>
         </div>
         <div class="info">
             <h3>Fun Fact</h3>
@@ -28,6 +29,13 @@
             <img class="fit" alt="A picture of two polar bears" src="images/polar-bears.jpg">
         </div>
     </div>
+    <script type="text/javascript" src="include.js"></script>
+    <!--script that loads from a file must be an empty tag-->
+    <script>
+        includeHTML();
+        console.log("script called");
+    </script>
+    <!--scripts should be at the end of the body-->
 </body>
 
 </html>
